# typing_engine

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: publish-on-tag-push.yaml  test-on-push-pr.yaml
src/: chunk.rs  chunk_key_stroke_dictionary.rs  display_info.rs  key_stroke.rs  lib.rs  query.rs  spell.rs  statistics.rs  test_utility.rs  typing_engine.rs  typing_primitive_types.rs  utility.rs  vocabulary.rs  vocabulary_parser.rs
src/chunk/: confirmed.rs  has_actual_key_strokes.rs  typed.rs
src/query/: test.rs
src/statistics/: lap_statistics.rs  multi_target_position_convert.rs  result.rs  skill_statistics.rs  statistical_event.rs  statistics_counter.rs
src/statistics/multi_target_position_convert/: test.rs
src/statistics/result/: test.rs
src/statistics/skill_statistics/: public.rs
src/typing_engine/: processed_chunk_info.rs
src/typing_engine/processed_chunk_info/: test.rs
src/typing_primitive_types/: chunk.rs  key_stroke.rs  spell.rs  vocabulary.rs
src/typing_primitive_types/chunk/: candidate_unappended.rs  chunk_candidate_unappended.rs  confirmed.rs  has_actual_key_strokes.rs  inflight.rs  key_stroke_candidate.rs  single_n_availability.rs  test.rs  typed.rs  unprocessed.rs
src/typing_primitive_types/chunk/inflight/: test.rs
src/typing_primitive_types/chunk/typed/: test.rs
tests/: integration_test.rs
