[package]
name = "typing_engine"
description = "A typing game engine for Japanese and English."
license = "MIT"
authors = ["Kotaro7750 <7750koutarou@gmail.com>"]
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13.0"
serde = {version = "1.0.143", features = ["derive"] }
rand = "0.8.5"
